# ChangeLog for dev-perl/DateTime-TimeZone
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.105 2009/08/18 20:39:19 tove Exp $

*DateTime-TimeZone-0.95 (18 Aug 2009)

  18 Aug 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.95.ebuild:
  Version bump

*DateTime-TimeZone-0.93 (21 Jul 2009)

  21 Jul 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.93.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.89.ebuild, -DateTime-TimeZone-0.90.ebuild:
  Cleanup

*DateTime-TimeZone-0.91 (28 May 2009)

  28 May 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.91.ebuild:
  Version bump

  01 May 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.83.01.ebuild, -DateTime-TimeZone-0.84.ebuild,
  -DateTime-TimeZone-0.85.ebuild, -DateTime-TimeZone-0.86.ebuild,
  -DateTime-TimeZone-0.88.ebuild:
  Cleanup

*DateTime-TimeZone-0.90 (27 Apr 2009)

  27 Apr 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.90.ebuild:
  Version bump

*DateTime-TimeZone-0.89 (14 Apr 2009)

  14 Apr 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.89.ebuild:
  Version bump

*DateTime-TimeZone-0.88 (07 Apr 2009)

  07 Apr 2009; Torsten Veller <tove@gentoo.org>
  -DateTime-TimeZone-0.87.ebuild, +DateTime-TimeZone-0.88.ebuild:
  Version bump. Cleanup

*DateTime-TimeZone-0.87 (06 Apr 2009)

  06 Apr 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.87.ebuild:
  Version bump

*DateTime-TimeZone-0.86 (23 Mar 2009)

  23 Mar 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.86.ebuild:
  Version bump

*DateTime-TimeZone-0.85 (16 Mar 2009)

  16 Mar 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.85.ebuild:
  Version bump

*DateTime-TimeZone-0.84 (23 Jan 2009)

  23 Jan 2009; Torsten Veller <tove@gentoo.org>
  +DateTime-TimeZone-0.84.ebuild:
  Version bump
