@@ -1,8 +1,10 @@
 DIST DateTime-TimeZone-0.91.tar.gz 377304 RMD160 1e953d5dff25880953caabd9d4be15e86b9c1473 SHA1 9d9f482177a307326ef7a0f3492a2e2b8815349b SHA256 db9883d969d88db0e4e7ca815faf8f487eb2c487a764421c1ae39ceb58416bc4
 DIST DateTime-TimeZone-0.93.tar.gz 509450 RMD160 acd71c59f0c75c6d97a1ffeb16512247e8c03918 SHA1 ea6ff3f83e8151ac8e177c90c7c5533dffe707d2 SHA256 54c0e7bac5ec0be23346319ee2b6ecbd6cb26df8c8a373e1de85edfe27643005
 DIST DateTime-TimeZone-0.95.tar.gz 510042 RMD160 bb45e507b6ed859f470a52ddf2be4ca196d2c73a SHA1 7485a34b902464e5035c81a8ff4f2cd3c6012958 SHA256 e39e6996f7fca42887cb07d30ef12240a8b28fd829797a3f81e4a1e054bf5916
+DIST DateTime-TimeZone-0.96.tar.gz 510341 RMD160 510275520e175d9b3127633b69ffaa57b2e5ccb8 SHA1 c124b6dbd6a57788e95b73b63a2dd0e42bb76fa9 SHA256 9d1d10d57628376da5d2903102bb4bd14e9f569a9f071626fdef81c54c3dc640
 EBUILD DateTime-TimeZone-0.91.ebuild 661 RMD160 f4274f6eed2867f216058e59279b8cf3237b766c SHA1 9323119f8878ef315cc7d7b10302fa0b578d2fac SHA256 d1f0a91b606e37ad2a489cfd2a806b77b3f73f406148a215b36336ec7d8b3d36
 EBUILD DateTime-TimeZone-0.93.ebuild 661 RMD160 fda383e66628d639d1d847b7d233815583e42c08 SHA1 17e6436bf962246d66ab551e2ce70bf74ad53942 SHA256 969858c82bd00d9e2dc59589953a0d0c3ff23af2d937dacf843fa1b399c3009c
 EBUILD DateTime-TimeZone-0.95.ebuild 661 RMD160 c27f0e9365cd10fcdaae1fe9376c55f424f5cf4f SHA1 83b20b08fd3aa71b835f90f988d7697ba00de2ab SHA256 2329ad07d35ed784b8fa6e55267ceeaadc6b4d3696976eea1c16139313aeda23
-MISC ChangeLog 15392 RMD160 aee56433ea0f16ecd7226bc31e0018ae6271450f SHA1 9e6182bbb7aa03d8c56c4eb5134650866c71f1de SHA256 836aef5c7bb3b6a1e4a9d60e60477e3569f2b2cbff6898cfed9ae9f509a40bc9
+EBUILD DateTime-TimeZone-0.96.ebuild 708 RMD160 a8f7047a254ae3cddb08f9c30b3b0b457fb4e82b SHA1 ce77910f767545315535f9e44f6fefee3598c65d SHA256 95b2a67344d1ab5558123640c9ceb3bbac8953916f31b4ae3b7c80f2d70f8efe
+MISC ChangeLog 15529 RMD160 ecd049c9d0925efaf2895227f5e140960644764c SHA1 a7b036ca28d5dd202cfce0235f4d456ca3505a95 SHA256 13318d33f0f8277cb2954a17d451bb84e22f02b7cae19b1d5664048840afcf76
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
