@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/DateTime-TimeZone
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.105 2009/08/18 20:39:19 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DateTime-TimeZone/ChangeLog,v 1.106 2009/08/22 13:23:04 tove Exp $
+
+*DateTime-TimeZone-0.96 (22 Aug 2009)
+
+  22 Aug 2009; Torsten Veller <tove@gentoo.org>
+  +DateTime-TimeZone-0.96.ebuild:
+  Version bump
 
 *DateTime-TimeZone-0.95 (18 Aug 2009)
 
